--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,14 @@
-
-</body>
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="ZAXXY" content="Zaxxy Downloader هو أداة مجانية وسريعة لتحميل الفيديوهات والصوتيات من YouTube وTikTok وInstagram وFacebook والمزيد، بسهولة وجودة عالية.">
+  <meta name="Bienvenue sur zaxxy Downloader" content="Zaxxy Downloader هو أداة مجانية وسريعة لتحميل الفيديوهات والصوتيات من YouTube وTikTok وInstagram وFacebook والمزيد، بسهولة وجودة عالية.">
   <meta name="keywords" content="Zaxxy Downloader, تحميل فيديو, تحميل صوت, تحميل من يوتيوب, YouTube Downloader, تحميل TikTok, تحميل Instagram, تحميل Facebook">
   <meta name="author" content="Zaxxy Team">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://zaxxy-downloader-3.onrender.com">
-  <title>Zaxxy Downloader</title>
+  <title>Zaxxy Downloader - حمّل من تيك توك ويوتيوب بسهولة</title>
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
 
@@ -335,4 +333,4 @@
     });
   </script>
 </body>
-      </html>
+</html>
